# PasswordBasedHashing

./: ConsolePBH.sln  README.md
PasswordBasedHashing/: HashEncryptionService.cs  HashingOptions.cs  PasswordBasedHashing.csproj
TestingPBH/: FunctionTest.cs
c#/ConsolePBH/: ConsolePBH.csproj  ConsolePBH.sln  Program.cs
c#/ConsolePBH/PasswordBasedHashing/: IHashEncryption.cs
c#/ConsolePBH/TestingPBH/: TestingPBH.csproj
goLang/: hashEncryptionService.go
rust/: Cargo.toml
rust/pbh/: Cargo.toml
rust/pbh/src/: hash_encryption_service.rs  ihash_encryption_service.rs  lib.rs
rust/src/: main.rs
rustTest/: Cargo.toml
