[package]
name = "pbh"
version = "0.1.0"
authors = ["Sean Myers <spmyers@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbkdf2 = { version = "0.2", default-features = false }
data-encoding = "2.3.1"
ring = "0.16.19"
base64 = "0.13.0"